[Changes 1.2.2]

* Remove obsolete AIM plugin. (caf)

* Tighten up the handling of channel WALLs. (caf)

* Don't mangle ANSI sequences in NOTICEs. (caf)

* Use BitchX.kill in all cases for random /KILL messages, and install a
  copy of this file. (caf)

* Fix potential crash in /unban, and change it so that it correctly matches
  the user@ portion of the hostmask. (caf)

* Clean up the build by fixing up the (unsigned char *) / (char *) mismatches
  that the compiler warns about. (caf)

* Fix bxconfigure crashing on very wide terminals (reported by cpet). (caf)

* Remove obsolete Chatnet 310 numeric support (WANT_CHATNET). (caf)

* Rework the lag check to make it simpler and more reliable.  This adds
  a /set LAG_CHECK_INTERVAL to control the frequency of lag checks. (caf)

* Wire up /set DOUBLE_STATUS_LINE (reported by presi). (caf)

* Fix ignoring of nick changes. (caf)

[Changes 1.2.1]

* Prefer <fcntl.h> over <sys/fcntl.h> (reported by ncopa). (caf)

* Fix overflow in say() when handling a maximum-length client message. (caf)

* Remove WANT_CHAN_NICK_SERV define and include network services commands 
  by default. (caf)

* Pass through externally-provided CPPFLAGS (reported by cpet). (caf)

* Don't set the mode on new channels until synched - this speeds up joining
  lots of channels at connect time if one of them is new, and reduces the
  chance of being flooded off the server. (caf)

* Correctly handle channel sync across multi-server. (caf)

* Fixes and improvements for channel logging. (caf)

* Use correct (MODECHAN and MODEUSER) display level for channel and user
  modes. (caf)

* Allow %- status format to handle max-length topics (reported by oxy). (caf)

* Add /FSET WOHIS_LOGGEDIN for services login info on hybrid, ratbox and
  ircu. (caf)

* Add sanity checking of incoming nicknames. (caf)

* /MV (massvoice) shouldn't send +v for already-voiced users. (caf)

* Fix lag check on recent 32 bit OpenBSD / NetBSD (reported by DJ). (caf)
